# web-stl-editor

./: .gitignore  CMakeLists.txt
public/: index.html
public/js/: app.js
src/cpp/: main.cpp
